# indoor-loc-sim

./: LICENSE  README.md  pyproject.toml  requirements.txt
docs/: tutorial.md  tutorial_es.md
src/indoor_loc_sim/: __init__.py  main.py
src/indoor_loc_sim/core/: __init__.py  models.py  project_io.py  trajectory.py
src/indoor_loc_sim/engine/: __init__.py  analysis.py  fingerprint.py  geometry.py  signals.py  tracking.py
src/indoor_loc_sim/gui/: __init__.py  main_window.py  state.py
src/indoor_loc_sim/gui/tabs/: __init__.py  analysis_tab.py  estimation_tab.py  planimetry_tab.py  signal_tab.py  trajectory_tab.py
src/indoor_loc_sim/gui/widgets/: floor_plan_canvas.py  settings_dialog.py
